--- a/index.html
+++ b/index.html
@@ -58,7 +58,18 @@
                 <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="zoom"></a>
             </div>
 
-            <div class="cards1">
+            <div style="display: flex; flex-direction: row; justify-content: center;">
+                <img src="Graphic Design/portfoliobutton-18.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
+                <img src="Graphic Design/portfoliobutton-19.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
+                <img src="Graphic Design/portfoliobutton-20.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
+            </div>
+
+            <div style="display: flex; flex-direction: row; justify-content: center;">
+                <img src="Graphic Design/portfoliobutton-21.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
+                <img src="Graphic Design/portfoliobutton-22.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
+            </div>
+
+            <!--<div class="cards1">
                 <div class="card-deck w-25 h-25">
                     <div class="card" style="border: black solid 3px;">
                         <img src="Graphic Design/thesis1-01.jpg" class="card-img-top" alt="...">
@@ -103,7 +114,7 @@
                             <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Logo Designs</a></h5>
                         </div>
                     </div>
-                </div>    
+                </div>-->    
             </div>
         </div>
     </div>
