--- a/uxui.html
+++ b/uxui.html
@@ -45,10 +45,12 @@
 
 <div class="background">
     <div class="background2">
-        <div style="display: flex; justify-content: center; padding: 10px;">
-          <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-          <a href="#"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;"></a>
-        </div>
+      <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
+        <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+        <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;"></a>
+        <a href="#"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+        <a href="#"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+    </div>
 
         <div class="cards1">
           <div class="card-deck w-50 h-100">
