--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
     <div class="background" style="display: flex; flex-direction: column;">
         <div class="background2" style="display: flex; flex-direction: column;">
             <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
-                <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;"></a>
+                <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="active2"></a>
                 <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="zoom"></a>
                 <a href="#"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
                 <a href="#"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
             </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: center;">
+            <div style="display: flex; flex-direction: row; justify-content: space-around;">
                 <!--<a href="thesis.html"><img src="Graphic Design/portfoliobutton-18.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2"></a>-->
                 <img src="Graphic Design/BigEventbutton-28.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
                 <img src="Graphic Design/hazingpreventionbutton.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
             </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: center;">
+            <div style="display: flex; flex-direction: row; justify-content: space-around;">
                 <img src="Graphic Design/SSRbutton-27.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
                 <img src="Graphic Design/sgabutton.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
             </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: center;">
+            <div style="display: flex; flex-direction: row; justify-content: space-around;">
                 <img src="Graphic Design/environmentposterbutton.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
                 <img src="Graphic Design/logobutton.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
             </div>
